--- a/homework_5_Thao_B1609548/app/src/main/AndroidManifest.xml
+++ b/homework_5_Thao_B1609548/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.homework_5_thao_b1609548">
-
+    <uses-permission
+        android:name="android.permission.READ_EXTERNAL_STORARGE"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
